# Personal-Page

./: .gitignore  README.md  index.js  package-lock.json  package.json
client/: .prettierrc  index.css  index.html  input.css  manifest.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts
client/src/: App.tsx  api.ts  index.tsx
client/src/cards/: calculator.tsx  test.tsx  test2.tsx
client/src/pages/: Home.tsx  LoginSignup.tsx
client/src/utils/: button.tsx  card.tsx  error.tsx  form.tsx  input.tsx  label.tsx  loading.tsx  logout.tsx  switch.tsx
server/: Cargo.toml
server/migrations/: 20240912191827_create_users_table.up.sql  20240922233419_create_cards_table.up.sql
server/src/: api.rs  extract.rs  jwt.rs  main.rs  models.rs  payload.rs  recompiler.rs  schema.rs
server/src/extract/: payload.rs  user.rs
server/src/extractors/: payload.rs  user.rs
server/src/models/: ids.rs  jwt.rs  schema.rs
server/src/schema/: api.rs  db.rs  ids.rs
